[gd_scene load_steps=3 format=3 uid="uid://fuef6ulivwf1"]

[ext_resource type="Script" uid="uid://c6hvf3t2jonte" path="res://scenes/ui/level_info/level_info.gd" id="1_a43rh"]
[ext_resource type="Texture2D" uid="uid://dbadms1sa0w6o" path="res://assets/UI/Arrow.png" id="2_ok1fk"]

[node name="LevelInfo" type="HBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -227.0
offset_bottom = 153.0
grow_horizontal = 0
size_flags_horizontal = 10
theme_override_constants/separation = -5
alignment = 2
script = ExtResource("1_a43rh")

[node name="Arrow" type="CheckBox" parent="."]
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme_override_icons/checked = ExtResource("2_ok1fk")
theme_override_icons/unchecked = ExtResource("2_ok1fk")
icon_alignment = 1

[node name="DragSeparator" type="VSeparator" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 15
theme_override_constants/separation = 10

[node name="InfoContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"RedPanelContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="InfoContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="RichTextLabel" parent="InfoContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
text = "Moving 5"
fit_content = true
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InfoContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Description" type="RichTextLabel" parent="InfoContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
text = "Descrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feitoDescrição do nivel
o wqe de ve ser feito"

[connection signal="toggled" from="Arrow" to="." method="_on_arrow_toggled"]
[connection signal="gui_input" from="DragSeparator" to="." method="_on_drag_separator_gui_input"]
